src/assets/styles/app.scss
/* ... */
.meta-chip {
  line-height: 1 !important;
  height: auto !important;
}
.chips-grid {
  display: flex;
  flex-wrap: wrap;
  &.gap-size {
    &-xs {
      grid-gap: 10px;
    }
    &-s {
      grid-gap: 15px;
    }
    &-m {
      grid-gap: 20px;
    }
    &-l {
      grid-gap: 25px;
    }
    &-xl {
      grid-gap: 30px;
    }
  }
  &.card-size {
    &-1 {
      .meta-chip {
        padding: 0 3px;
        font-size: 0.6em !important;
      }
    }
    &-2 {
      .meta-chip {
        padding: 0 5px;
        font-size: 0.8em !important;
      }
    }
    &-3 {
      .meta-chip {
        padding: 2px 8px;
        font-size: 0.8em !important;
      }
    }
    &-4 {
      .meta-chip {
        padding: 5px 8px;
        font-size: 1.2em !important;
      }
    }
    &-5 {
      .v-avatar {
        transform: scale(1.3);
      }
      .meta-chip {
        padding: 10px 14px;
        font-size: 1.4em !important;
      }
    }
  }
}
.card-grid.wide-image {
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
  &.card-size {
    &-1 {
      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)) !important;
    }
    &-2 {
      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
    &-4 {
      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)) !important;
    }
    &-5 {
      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)) !important;
    }
  }
}
// storyboard
.line-grid {
  &.card-size {
    &-1 {
      .meta-card {
        font-size: 0.7rem;
      }
      .v-icon {
        font-size: 1rem !important;
      }
    }
    &-2 {
      .meta-card {
        font-size: 0.9rem;
      }
      .v-icon {
        font-size: 1.2rem !important;
      }
    }
    &-4 {
      .meta-card {
        font-size: 1.2rem;
      }
      .v-icon {
        font-size: 1.6rem !important;
      }
    }
    &-5 {
      .meta-card {
        font-size: 1.4rem;
      }
      .v-icon {
        font-size: 2rem !important;
      }
    }
  }
}

@media (max-width: 480px) {
  .card-grid {
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
    &.card-size {
      &-1 {
        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
      }
      &-2 {
        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
      }
      &-4 {
        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
      }
      &-5 {
        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
      }
    }
  }
  .card-grid.wide-image {
    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)) !important;
    &.card-size {
      &-1 {
        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)) !important;
      }
      &-2 {
        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)) !important;
      }
      &-4 {
        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)) !important;
      }
      &-5 {
        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)) !important;
      }
    }
  }
}

